<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/png"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/propertyList_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/property_type"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp"
                >
                <AutoCompleteTextView
                    android:id="@+id/propertyText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lo_bedroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/propertyList_type"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bedroomList_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/bedroom"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp">

                    <AutoCompleteTextView
                        android:id="@+id/bedroomText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lo_dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_bedroom"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/datetime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_time"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/datetimeText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_dateTime"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/monthly_price"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp"
                app:suffixText="@string/suffix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lo_furniture_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_type"
                android:layout_marginTop="5dp"
                android:hint="@string/furniture_type">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/furnitureList_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/furniture_type"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp">
                    <AutoCompleteTextView
                        android:id="@+id/furnitureText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_furniture_type"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name_of_reporter"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_type"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/note"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteText"
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:singleLine="false"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_type"
                android:layout_marginStart="100dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/button"
                android:text="@string/btn_submit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_submit"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/button"
                android:text="@string/btn_clear" />
        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>